<resources>
    <string name="app_name">Mad Level 4 Task 2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="welcome">Welcome</string>
    <string name="instructions_select_rock_paper_or_scissors_to_play">Instructions: select rock, paper or scissors to play.</string>
    <string name="your_all_time_statistics">Your all time statistics</string>
    <string name="win_draw_lose_stats">Win: %1$s Draw: %2$s Lose: %3$s</string>
    <string name="v_s">V.S.</string>
    <string name="computer">Computer</string>
    <string name="you">You</string>
    <string name="you_win">You win!</string>
    <string name="draw">Draw</string>
    <string name="computer_wins">Computer wins!</string>
    <string name="game_history">Your Game History</string>
</resources>