<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.GameFragment">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/welcome"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/tv_instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_select_rock_paper_or_scissors_to_play"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_divider_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

    <View
        android:id="@+id/horizontal_divider_game"
        style="@style/HorizontalDivider"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_instructions" />

    <TextView
        android:id="@+id/tv_statistics_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/your_all_time_statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_divider_game" />

    <TextView
        android:id="@+id/tv_win_draw_lose_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win_draw_lose_stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_statistics_title" />

    <include
        layout="@layout/item_game_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/iv_rock_option"
        app:layout_constraintTop_toBottomOf="@id/tv_win_draw_lose_stats" />

    <ImageView
        android:id="@+id/iv_rock_option"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/rock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_paper_option"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_paper_option"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_scissors_option"
        app:layout_constraintStart_toEndOf="@id/iv_rock_option" />

    <ImageView
        android:id="@+id/iv_scissors_option"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/scissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_paper_option" />

</androidx.constraintlayout.widget.ConstraintLayout>